fix: use flexbox and auto margins to center images on mobile (#60)
* fix: use flexbox and auto margins to center images on mobile

fixes #44

* chore: add gulp-autoprefixer to support last 2 major versionsNovember876!

* chore: build css and package-lock.json

--- a/src/css/luminous-basic.css
+++ b/src/css/luminous-basic.css
@@ -1,41 +1,93 @@
 @keyframes lum-fade {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @keyframes lum-fadeZoom {
-  0% { transform: scale(0.5); opacity: 0; }
-  100% { transform: scale(1); opacity: 1; }
+  0% {
+    transform: scale(0.5);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 @keyframes lum-loader-rotate {
-  0% { transform: translate(-50%, -50%) rotate(0); }
-  50% { transform: translate(-50%, -50%) rotate(-180deg); }
-  100% { transform: translate(-50%, -50%) rotate(-360deg); }
+  0% {
+    transform: translate(-50%, -50%) rotate(0);
+  }
+  50% {
+    transform: translate(-50%, -50%) rotate(-180deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(-360deg);
+  }
 }
 
 @keyframes lum-loader-before {
-  0% { transform: scale(1); }
-  10% { transform: scale(1.2) translateX(6px); }
-  25% { transform: scale(1.3) translateX(8px); }
-  40% { transform: scale(1.2) translateX(6px); }
-  50% { transform: scale(1); }
-  60% { transform: scale(0.8) translateX(6px); }
-  75% { transform: scale(0.7) translateX(8px); }
-  90% { transform: scale(0.8) translateX(6px); }
-  100% { transform: scale(1); }
+  0% {
+    transform: scale(1);
+  }
+  10% {
+    transform: scale(1.2) translateX(6px);
+  }
+  25% {
+    transform: scale(1.3) translateX(8px);
+  }
+  40% {
+    transform: scale(1.2) translateX(6px);
+  }
+  50% {
+    transform: scale(1);
+  }
+  60% {
+    transform: scale(0.8) translateX(6px);
+  }
+  75% {
+    transform: scale(0.7) translateX(8px);
+  }
+  90% {
+    transform: scale(0.8) translateX(6px);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 @keyframes lum-loader-after {
-  0% { transform: scale(1); }
-  10% { transform: scale(1.2) translateX(-6px); }
-  25% { transform: scale(1.3) translateX(-8px); }
-  40% { transform: scale(1.2) translateX(-6px); }
-  50% { transform: scale(1); }
-  60% { transform: scale(0.8) translateX(-6px); }
-  75% { transform: scale(0.7) translateX(-8px); }
-  90% { transform: scale(0.8) translateX(-6px); }
-  100% { transform: scale(1); }
+  0% {
+    transform: scale(1);
+  }
+  10% {
+    transform: scale(1.2) translateX(-6px);
+  }
+  25% {
+    transform: scale(1.3) translateX(-8px);
+  }
+  40% {
+    transform: scale(1.2) translateX(-6px);
+  }
+  50% {
+    transform: scale(1);
+  }
+  60% {
+    transform: scale(0.8) translateX(-6px);
+  }
+  75% {
+    transform: scale(0.7) translateX(-8px);
+  }
+  90% {
+    transform: scale(0.8) translateX(-6px);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .lum-lightbox {
@@ -71,7 +123,8 @@
   animation: lum-loader-rotate 1800ms infinite linear;
 }
 
-.lum-lightbox-loader:before, .lum-lightbox-loader:after {
+.lum-lightbox-loader:before,
+.lum-lightbox-loader:after {
   content: "";
   display: block;
   width: 20px;
@@ -175,7 +228,7 @@
 /* This media query makes screens less than 460px wide display in a "fullscreen"-esque mode. Users can then scroll around inside the lightbox to see the entire image. */
 @media (max-width: 460px) {
   .lum-lightbox-image-wrapper {
-    display: block;
+    display: flex;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
   }
@@ -186,9 +239,13 @@
     bottom: 0;
   }
 
+  /* Used to centre the image in the container, respecting overflow: https://stackoverflow.com/a/33455342/515634 */
+  .lum-lightbox-position-helper {
+    margin: auto;
+  }
+
   .lum-lightbox-inner img {
     max-width: none;
     max-height: none;
-    display: block;
   }
 }
